# swayng

./: .gitignore  README.md  config.in  meson.build  meson_options.txt  swayng.desktop
client/: meson.build
common/: ipc-client.c  meson.build
completions/: meson.build
completions/bash/: swayng  swayngbar  swayngmsg
completions/fish/: swayng.fish  swayngmsg.fish  swayngnag.fish
completions/zsh/: _swayng  _swayngbar  _swayngmsg
include/sway/: commands.h  config.h  server.h  view_icon.h
include/sway/tree/: container.h  view.h
subprojects/: libdrm.wrap
subprojects/wlroots/: CONTRIBUTING.md  meson.build  meson.options
subprojects/wlroots/.builds/: alpine.yml  archlinux.yml  freebsd.yml
subprojects/wlroots/include/: meson.build
subprojects/wlroots/protocol/: input-method-unstable-v2.xml  wlr-export-dmabuf-unstable-v1.xml
subprojects/wlroots/render/: color.c  dmabuf_linux.c  drm_syncobj.c  drm_syncobj_merger.c  meson.build  pass.c  wlr_object.c
subprojects/wlroots/render/gles2/shaders/: decoration.frag  meson.build  quad.frag  shadow.frag  tex_external.frag  tex_rgba.frag  tex_rgbx.frag
subprojects/wlroots/tinywl/: Makefile  tinywl.c
subprojects/wlroots/types/: wlr_color_management_v1.c  wlr_color_representation_v1.c  wlr_compositor.c  wlr_cursor.c  wlr_ext_background_effect_v1.c  wlr_keyboard.c  (+10 more)
sway/: commands.c  config.c  ipc-json.c  ipc-server.c  main.c  meson.build  server.c  swayng-bar.5.scd  swayng-input.5.scd  swayng-ipc.7.scd  swayng-output.5.scd  swayng.1.scd  swayng.5.scd  view_icon.c
sway/commands/: bar.c  border.c  client.c  decoration.c  font.c  fullscreen.c  reload.c  swaynag_command.c  title_window_icon.c  titlebar_border_radius.c  titlebar_border_thickness.c  titlebar_padding.c
sway/config/: bar.c
sway/desktop/: transaction.c  xdg_shell.c  xwayland.c
sway/input/: cursor.c  text_input.c
sway/tree/: container.c  root.c  scene.c  view.c
swaybar/: ipc.c  main.c  meson.build  swayngbar-protocol.7.scd
swaymsg/: main.c  meson.build  swayngmsg.1.scd
swaynag/: config.c  meson.build  swaynag.c  swayngnag.1.scd  swayngnag.5.scd
(+103 files in other folders)
